--- a/_site.yml
+++ b/_site.yml
@@ -9,5 +9,11 @@ navbar:
       href: mailto:<hj2479@columbia.edu>
     - icon: fa-github fa-lg
       href: http://github.com/Harksoul
+    - icon: fa-linkedin fa-lg
+      href: https://www.linkedin.com/
 output:
-  html_document
+  html_document:
+    toc: true
+    toc_float: true
+    theme: yeti
+    css: style.css
